--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-widget-tweaks==1.4.12
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.0
+phonenumbers==8.13.11
 Pillow==9.4.0
 platformdirs==3.0.0
 pytz==2022.7.1
